*CVS*

* Added Request#ssl? which is shorthand for @request.protocol == "https://"

* Added the choice to call form_tag with no arguments (resulting in a form posting to current action) [bitsweat]

* Upgraded to Builder 1.2.1

* Added :module as an alias for :controller_prefix to url_for and friends, so you can do redirect_to(:module => "shop", :controller => "purchases")
  and go to /shop/purchases/

* Added support for controllers in modules through @params["module"].

* Added reloading for dependencies under cached environments like FastCGI and mod_ruby. This makes it possible to use those environments for development.
  This is turned on by default, but can be turned off with ActionController::Base.reload_dependencies = false in production environments.

  NOTE: This will only have an effect if you use the new model, service, and observer class methods to mark dependencies. All libraries loaded through
  require will be "forever" cached. You can, however, use ActionController::Base.load_or_require("library") to get this behavior outside of the new
  dependency style.

* Added that controllers will automatically require their own helper if possible. So instead of doing:

    class MsgController < AbstractApplicationController
      helper :msg
    end
    
  ...you can just do:
  
    class MsgController < AbstractApplicationController
    end

* Added dependencies_on(layer) to query the dependencies of a controller. Examples:
  
    MsgController.dependencies_on(:model)    # => [ :post, :comment, :attachment ]
    MsgController.dependencies_on(:service)  # => [ :notification_service ]
    MsgController.dependencies_on(:observer) # => [ :comment_observer ]

* Added a new dependency model with the class methods model, service, and observer. Example:

    class MsgController < AbstractApplicationController
      model    :post, :comment, :attachment
      service  :notification_service
      observer :comment_observer
    end
